--- a/build.yaml
+++ b/build.yaml
@@ -20,3 +20,9 @@
 include:
   - board: nice_nano_v2
     shield: huge
+
+on: [workflow_dispatch]
+
+jobs:
+  build:
+    uses: petejohanson/zmk/.github/workflows/build-user-config.yml@core/zephyr-3.5-update
