update to use Enursha 3320 branch

--- a/config/west.yml
+++ b/config/west.yml
@@ -2,15 +2,15 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/petejohanson
-    - name: inorichi
-      url-base: https://github.com/inorichi
+    - name: Enursha
+      url-base: https://github.com/Enursha/zmk-pmw3320-driver
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: feat/pointers-move-scroll
       import: app/west.yml
     - name: zmk-pmw3610-driver
-      remote: inorichi
-      revision: main
+      remote: Enursha
+      revision: 3320
   self:
     path: config
